<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <!-- 상단 바 -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topbar_manager_measure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorSurface"
        app:layout_constraintTop_toTopOf="parent">

        <!-- 제목 -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_manager_measure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/manager_measure_title"
            android:textSize="@dimen/text_size_large_body"
            android:textStyle="bold"
            android:textColor="@color/text_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_measure_arrow_up" />

        <!-- 위로 버튼 -->
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_measure_arrow_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_circle_up_24px"
            android:contentDescription="@string/arrow_up_description"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:layout_constraintEnd_toStartOf="@id/btn_measure_arrow_down"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="8dp" />

        <!-- 아래로 버튼 -->
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_measure_arrow_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_circle_down_24px"
            android:contentDescription="@string/arrow_down_description"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:layout_constraintEnd_toStartOf="@id/btn_measure_cancel"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="8dp" />

        <!-- 취소 버튼 -->
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_measure_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_cancel_24px"
            android:contentDescription="@string/remove_item_description"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="8dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- 리사이클러뷰와 테두리 -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_measure_outline_background"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/topbar_manager_measure">

        <!-- 리사이클러뷰 -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_measure_text_items"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
